v.1.1.0~beta1
- added option to have timed triggers run on weekdays or weekends
- sunrise and sunset are now timed triggers
- added command line python script to change brightness

v.1.0.0
- feature complete
- see README.txt for features and usage details

v.0.4.1
- fix for name change of Kodi addon with which this communicates

v.0.4.0
- gave up on temperature/humidity adjustments and deleted that code
  if you're using a SenseHAT get a ribbon cable and move it away from the CPU
- changed the way the sensor log files are generated to exclude non-responsive sensors
- code refactoring
- auto dimming logic now works
- added min and max light levels in settings to help calibrate camera for particular environs

v.0.3.1
- fixed bug in functions to set brightness (11 is the lowest you can set it)

v.0.3.0
- removed all Joystick interactions (couldn't get the python bindings to respond)
- changed screen off functions to set brightness to 0 instead (so touchscreen stays active)
- responds to message from Kodi to turn brightness back up from 0

v.0.2.0
- added ability to handle websocket messages sent by Kodi (brightness and auto dim)

v.0.1.4
- fix for joystick actions not resulting in anything
- fix for crash if vcgencmd is not found

v.0.1.3
- added temp_factor and humidity_factor to settings to allow calibration of SenseHAT

v.0.1.2
- added testmode setting to generate random data if running on non-RPi platform

v.0.1.1
- substantial refactoring to allow the script to keep logging even if Kodi is not running
- changed the way various threads were handled for simpler logic

v.0.1.0
- name change

v.0.0.10
- added option to have this script trigger the Kodi addon to update the weather screen
- added option to pass extra long joystick holds back to script for special processing
- added beginnings of autodim activation logic
- for testing certain modules return random data if not on RPi

v.0.0.9
- moved all RPi tools into rpiiteract.py