@@ -1,7 +1,7 @@
 # amount of time between sensor readings (in minutes)
 readingdelta = 2
 
-# whether autodim is enabled at restart (if you change this it won't matter until you restart)
+# whether autodim is enabled at restart (requires restart to take affect)
 # the dark and light auto dim functions require Raspberry Pi camera
 autodim = True
 
@@ -15,7 +15,7 @@ autodim = True
 # anything less than or equal to dark will be considered dark
 # anything greater than or equal to light will be considered light
 dark = 10
-light = 80
+light = 50
 
 # special triggers for autodim
 specialtriggers = { 'dark': 'ScreenOff',
@@ -24,10 +24,8 @@ specialtriggers = { 'dark': 'ScreenOff',
 # timed triggers are a list of lists in the form of time, action, day type
 # time is 24 hour and can also take Sunrise and Sunset as a value
 # day type is optional and can be Weekdays or Weekend
-
 timedtriggers = [
                   ['3:00', 'GetSunriseSunset'],
-                  ['8:00', 'ScreenOff', 'Weekdays'],
                   ['Sunrise', 'ScreenOn', 'Weekdays'],
                   ['Sunset', 'Brightness:175']
                 ] 
@@ -35,16 +33,22 @@ timedtriggers = [
 weekdays = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday']
 weekend = ['Saturday', 'Sunday']
 
-# if you want the script to trigger the Kodi weatherstation addon and update the weather window automatically, set to True
-# if set to False the Kodi weatherstation addon should be set to poll periodically for new data
-trigger_kodi = True
+# amount of time in minutes to look back at pressure history to determine pressure trend
+pressuredelta = 180
 
-# the URL Kodi remote command services are using
+# pressure in millibars that should be considered a rapid or regular change
+pressurerapid = 10
+pressureregular = 3
+
+# the URL Kodi remote command services are using (requires restart to take affect)
 kodiuri = 'localhost'
 
-# the port for websockets
+# the port for websockets (requires restart to take affect)
 kodiwsport = 9090
 
+#number of sensor and script logs to keep (requires restart to take affect) 
+logbackups = 5
+
 # if you're testing on a non-RPi platform, setting to True will generate random data for
-# SenseHAT sensors and PiCamera light level
+# SenseHAT sensors and PiCamera light level (requires restart to take affect)
 testmode = False
